Clear files/force-app/main/default/objects/Org_Expiry_Tracker__c/Org_Expiry_Tracker__c.object-meta.xml
<CustomObject>
    <description>Placeholder object for org expiry notification flow design.</description>
    <label>Org Expiry Tracker</label>
    <nameField>
        <displayFormat>OET-{00000}</displayFormat>
        <label>Tracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Expiry Trackers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>