Clear files/force-app/main/default/objects/Org_Expiry_Tracker__c/fields/Days_To_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Expiry__c</fullName>
    <formula>Org_Expiration_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Expiry</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>