Clear files/force-app/main/default/objects/Org_Expiry_Tracker__c/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <label>Notification Email</label>
    <type>Email</type>
</CustomField>