Clear files/force-app/main/default/objects/Org_Expiry_Tracker__c/fields/Org_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Org_Expiration_Date__c</fullName>
    <label>Org Expiration Date</label>
    <type>Date</type>
</CustomField>