Clear files/force-app/main/default/objects/Org_Expiry_Tracker__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <label>Org Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>