Clear files/force-app/main/default/objects/Org_Expiry_Tracker__c/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <label>Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>